--- a/index.html
+++ b/index.html
@@ -14,26 +14,31 @@
         <div class="part1">
           <label for="name">
             Name:
+            <br />
             <input id="name" type="text" required maxlength="25" />
           </label>
           <br /><br />
           <label for="surname">
             Surname:
+            <br />
             <input id="surname" type="text" required maxlength="25" />
           </label>
           <br /><br />
           <label for="address">
             Address:
+            <br />
             <input id="address" type="text" maxlength="1000" />
           </label>
           <br /><br />
           <label for="city">
             City:
+            <br />
             <input id="city" type="text" />
           </label>
           <br /><br />
           <label for="zipcode">
             Zip Code:
+            <br />
             <input id="zipcode" type="number" />
           </label>
           <br /><br />
@@ -43,14 +48,17 @@
         <div class="part2">
           <label for="checkin-date">
             Check In Date:
+            <br />
             <input id="checkin-date" type="date" required />
           </label>
           <br /><br />
           <label for="num-of-dates">
             Number of Days:
+            <br />
             <input id="num-of-dates" type="number" max="30" required />
           </label>
         </div>
+        <br /><br />
         <hr />
         <hr />
         <div class="part3">
@@ -92,7 +100,7 @@
           </label>
         </div>
 
-        <button type="submit">BOOK!</button>
+        <input type="submit" value="Submit"/>
       </fieldset>
     </form>
   </body>
